--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,20 @@
-<!-- TODO[HANA][W1]: Build the chat UI shell (message list, input, send button) and include script.js.
-     Done when: user can type a question and see bot response rendered from /ask.
-     (See SETUP.md)-->
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>AI Medical Support Chatbot</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="chat-container">
+      <main id="chat" aria-live="polite"></main>
+
+      <form id="form">
+        <textarea id="input" placeholder="Ask a health question…" rows="1"></textarea>
+        <button>Send</button>
+      </form>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
+</html>
